--- a/BTL/Areas/Admin/Views/HomeAdmin/PhongKS.cshtml
+++ b/BTL/Areas/Admin/Views/HomeAdmin/PhongKS.cshtml
@@ -1,4 +1,5 @@
-﻿@using BTL.Models;
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using BTL.Models;
 @using X.PagedList.Mvc.Core;
 @model X.PagedList.IPagedList<Phong>
 @{
@@ -50,7 +51,7 @@
                 @Html.DisplayFor(modelItem => item.MaLp)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.MaPhong">Edit</a> |
+                <a asp-action="SuaPhong" asp-route-maphong="@item.MaPhong">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.MaPhong">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.MaPhong">Delete</a>
             </td>
