--- a/BTL/Areas/Admin/Views/HomeAdmin/PhongKS.cshtml
+++ b/BTL/Areas/Admin/Views/HomeAdmin/PhongKS.cshtml
@@ -53,7 +53,7 @@
             <td>
                 <a asp-action="SuaPhong" asp-route-maphong="@item.MaPhong">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.MaPhong">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MaPhong">Delete</a>
+                <a asp-action="XoaPhong" asp-route-maPhong="@item.MaPhong">Delete</a>
             </td>
         </tr>
 }
