hien thi loaiphong

--- a/BTL/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/BTL/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -204,7 +204,7 @@
                         </a>
                         <div class="collapse" id="ui-basic">
                             <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"> <a class="nav-link" asp-area="admin" asp-controller="HomeAdmin" asp-action="PhongKS">Phòng</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-area="admin" asp-controller="HomeAdmin" asp-action="PhongKS">Phòng</a></li>     <!--quản lý phòng-->
                                 <li class="nav-item"> <a class="nav-link" asp-area="admin" asp-controller="HomeAdmin" asp-action="LoaiPhong">Loại phòng</a></li>
                             </ul>
                         </div>
