--- a/BTL/Areas/Admin/Views/HomeAdmin/LoaiPhong.cshtml
+++ b/BTL/Areas/Admin/Views/HomeAdmin/LoaiPhong.cshtml
@@ -51,7 +51,7 @@
                 @Html.DisplayFor(modelItem => item.Gia)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.MaLp">Edit</a> |
+                <a asp-action="SuaLoaiPhong" asp-route-malp="@item.MaLp">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.MaLp">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.MaLp">Delete</a>
             </td>
