--- a/BTL/Areas/Admin/Views/HomeAdmin/LoaiPhong.cshtml
+++ b/BTL/Areas/Admin/Views/HomeAdmin/LoaiPhong.cshtml
@@ -11,7 +11,7 @@
 <h1>LoaiPhong</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="ThemLoaiPhong">Create New</a>
 </p>
 <table class="table">
     <thead>
