--- a/BTL/Areas/Admin/Views/HomeAdmin/PhongKS.cshtml
+++ b/BTL/Areas/Admin/Views/HomeAdmin/PhongKS.cshtml
@@ -9,7 +9,7 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <h2>Phòng</h2>
 <p>
-    <a asp-action="PhongKS">Create New</a>
+    <a asp-action="ThemPhong">Create New</a>
 </p>
 <p>@TempData["Message"]</p>
 <table class="table">
