--- a/BTL/Areas/Admin/Views/HomeAdmin/ThemPhong.cshtml
+++ b/BTL/Areas/Admin/Views/HomeAdmin/ThemPhong.cshtml
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col-md-4">
         <form method="post" asp-action="ThemPhong">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @*<div asp-validation-summary="None" class="text-danger"></div>*@
             <div class="form-group">
                 <label asp-for="MaPhong" class="control-label"></label>
                 <input asp-for="MaPhong" class="form-control" />
