create funtion XoaLoaiPhong

--- a/BTL/Areas/Admin/Views/HomeAdmin/LoaiPhong.cshtml
+++ b/BTL/Areas/Admin/Views/HomeAdmin/LoaiPhong.cshtml
@@ -53,7 +53,7 @@
             <td>
                 <a asp-action="SuaLoaiPhong" asp-route-malp="@item.MaLp">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.MaLp">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MaLp">Delete</a>
+                <a asp-action="XoaLoaiPhong" asp-route-maLp="@item.MaLp">Delete</a>
             </td>
         </tr>
 }
