--- a/BTL/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/BTL/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -206,7 +206,7 @@
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item"> <a class="nav-link" asp-area="admin" asp-controller="HomeAdmin" asp-action="PhongKS">Phòng</a></li>     <!--quản lý phòng-->
                                 <li class="nav-item"> <a class="nav-link" asp-area="admin" asp-controller="HomeAdmin" asp-action="LoaiPhong">Loại phòng</a></li>
-                                <li class="nav-item"> <a class="nav-link" asp-area="admin" asp-controller="HomeAdmin" asp-action="#">Thiết bị</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-area="admin" asp-controller="HomeAdmin" asp-action="ThietBi">Thiết bị</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-area="admin" asp-controller="HomeAdmin" asp-action="#">Sử dụng thiết bị</a></li>
                             </ul>
                         </div>
