--- a/BTL/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/BTL/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -232,7 +232,7 @@
                         </div>
                     </li>            
                     <li class="nav-item">
-                        <a class="nav-link" href="../../pages/charts/chartjs.html">
+                        <a class="nav-link" asp-area="admin" asp-controller="HomeAdmin" asp-action="NhanVien">
                             <span class="menu-title">Nhân viên</span>
                             <i class="mdi mdi-chart-bar menu-icon"></i>
                         </a>
