khong them duoc khi csdl da co ma

--- a/BTL/Areas/Admin/Views/HomeAdmin/ThemLoaiPhong.cshtml
+++ b/BTL/Areas/Admin/Views/HomeAdmin/ThemLoaiPhong.cshtml
@@ -17,6 +17,7 @@
                 <label asp-for="MaLp" class="control-label"></label>
                 <input asp-for="MaLp" class="form-control" />
                 <span asp-validation-for="MaLp" class="text-danger"></span>
+                <p style="color:red">@TempData["Message"]</p>
             </div>
             <div class="form-group">
                 <label asp-for="LoaiPhong1" class="control-label"></label>
