--- a/BTL/Areas/Admin/Views/HomeAdmin/ThemNhanVien.cshtml
+++ b/BTL/Areas/Admin/Views/HomeAdmin/ThemNhanVien.cshtml
@@ -18,6 +18,7 @@
                 <label asp-for="MaNv" class="control-label"></label>
                 <input asp-for="MaNv" class="form-control" />
                 <span asp-validation-for="MaNv" class="text-danger"></span>
+                <p style="color:red">@TempData["Message"]</p>
             </div>
             <div class="form-group">
                 <label asp-for="TenNv" class="control-label"></label>
