--- a/BTL/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/BTL/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -212,7 +212,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../pages/icons/mdi.html">
+                        <a class="nav-link" asp-area="admin" asp-controller="HomeAdmin" asp-action="DichVu">
                             <span class="menu-title">Dịch vụ</span>
                             <i class="mdi mdi-contacts menu-icon"></i>
                         </a>
