--- a/BTL/Areas/Admin/Views/HomeAdmin/ThemSDTB.cshtml
+++ b/BTL/Areas/Admin/Views/HomeAdmin/ThemSDTB.cshtml
@@ -31,6 +31,11 @@
                 <span asp-validation-for="TinhTrang" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="NgaySD" class="control-label"></label>
+                <input asp-for="NgaySD" class="form-control" />
+                <span asp-validation-for="NgaySD" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
