--- a/BTL/Areas/Admin/Views/HomeAdmin/ThemSDTB.cshtml
+++ b/BTL/Areas/Admin/Views/HomeAdmin/ThemSDTB.cshtml
@@ -9,6 +9,7 @@
 
 <h4>SuDungThietBi</h4>
 <hr />
+<p style="color:red">@TempData["Message"]</p>
 <div class="row">
     <div class="col-md-4">
         <form method="post" asp-action="ThemSDTB">
