--- a/BTL/Views/Shared/_PartialRoomHeader.cshtml
+++ b/BTL/Views/Shared/_PartialRoomHeader.cshtml
@@ -3,30 +3,23 @@
 		<div class="container">
 			<div class="nav-header">
 				<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-				<h1 id="fh5co-logo"><a href="index.html">Luxe</a></h1>
+				<h1 id="fh5co-logo"><a asp-action="Index">Luxe</a></h1>
 				<nav id="fh5co-menu-wrap" role="navigation">
 					<ul class="sf-menu" id="fh5co-primary-menu">
-						<li><a class="active" asp-action="Index">Home</a></li>
+						<li><a class="active" asp-controller="Home" asp-action="Index">Home</a></li>
 						<li>
-							<a asp-action="Room" class="fh5co-sub-ddown">Room</a>
+							<a asp-action="Index" class="fh5co-sub-ddown">Room</a>
 							<ul class="fh5co-sub-menu">
-								@await Component.InvokeAsync("LoaiPhongMenu")
+								@await Component.InvokeAsync("LoaiPhongRoomMenu")
 							</ul>
 						</li>
-<<<<<<< HEAD:BTL/Views/Shared/_PartialHomeHeader.cshtml
+						
 						<li><a asp-action="Service">Services</a></li>
 						<li><a asp-action="Blog">Blog</a></li>
 						<li><a asp-action="Contact">Contact</a></li>
-						
-=======
-						<li><a asp-action="Index">Services</a></li>
-						<li><a asp-action="Index">Blog</a></li>
-						<li><a asp-action="Index">Contact</a></li>
->>>>>>> a9ad526cddf29978633fcc3cc264cf8d8ca4e46d:BTL/Views/Shared/_PartialHeader.cshtml
 					</ul>
 				</nav>
 			</div>
 		</div>
 	</header>
-	
 </div>
