--- a/BTL/Views/Shared/_LayoutContact.cshtml
+++ b/BTL/Views/Shared/_LayoutContact.cshtml
@@ -80,7 +80,7 @@
 	<div id="fh5co-wrapper">
 		<div id="fh5co-page">
 			<div id="fh5co-header">
-				@await Html.PartialAsync("_PartialHomeHeader.cshtml")
+				@await Html.PartialAsync("_PartialHeader.cshtml")
 
 			</div>
 			<!-- end:fh5co-header -->
