--- a/BTL/Views/Shared/_LayoutIndex.cshtml
+++ b/BTL/Views/Shared/_LayoutIndex.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -71,9 +70,8 @@
 </head>
 <body>
 	<div id="fh5co-wrapper">
-<<<<<<< HEAD:BTL/Views/Shared/_LayoutHome.cshtml
 		<div id="fh5co-page">
-			@await Html.PartialAsync("_PartialHomeHeader")
+			@await Html.PartialAsync("_PartialHeader")
 			<!-- end:fh5co-header -->
 			<aside id="fh5co-hero" class="js-fullheight">
 				<div class="flexslider js-fullheight">
@@ -92,86 +90,6 @@
 										</div>
 									</div>
 								</div>
-=======
-	<div id="fh5co-page">
-	@await Html.PartialAsync("_PartialHeader")
-	<!-- end:fh5co-header -->
-	<aside id="fh5co-hero" class="js-fullheight">
-		<div class="flexslider js-fullheight">
-			<ul class="slides">
-		   	<li style="background-image: url(../1Layout/images/slider1.jpg);">
-		   		<div class="overlay-gradient"></div>
-		   		<div class="container">
-		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
-		   				<div class="slider-text-inner js-fullheight">
-		   					<div class="desc">
-		   						<p><span>Bora Hotel</span></p>
-		   						<h2>Reserve Room for Family Vacation</h2>
-			   					<p>
-			   						<a href="#" class="btn btn-primary btn-lg">Book Now</a>
-			   					</p>
-		   					</div>
-		   				</div>
-		   			</div>
-		   		</div>
-		   	</li>
-		   	<li style="background-image: url(../1Layout/images/slider2.jpg);">
-		   		<div class="overlay-gradient"></div>
-		   		<div class="container">
-		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
-		   				<div class="slider-text-inner js-fullheight">
-		   					<div class="desc">
-		   						<p><span>Deluxe Hotel</span></p>
-		   						<h2>Make Your Vacation Comfortable</h2>
-			   					<p>
-			   						<a href="#" class="btn btn-primary btn-lg">Book Now</a>
-			   					</p>
-		   					</div>
-		   				</div>
-		   			</div>
-		   		</div>
-		   	</li>
-		   	<li style="background-image: url(../1Layout/images/slider3.jpg);">
-		   		<div class="overlay-gradient"></div>
-		   		<div class="container">
-		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
-		   				<div class="slider-text-inner js-fullheight">
-		   					<div class="desc">
-		   						<p><span>Luxe Hotel</span></p>
-		   						<h2>A Best Place To Enjoy Your Life</h2>
-			   					<p>
-			   						<a href="#" class="btn btn-primary btn-lg">Book Now</a>
-			   					</p>
-		   					</div>
-		   				</div>
-		   			</div>
-		   		</div>
-		   	</li>
-		   	
-		  	</ul>
-	  	</div>
-	</aside>
-	<div class="wrap">
-		<div class="container">
-			<div class="row">
-				<div id="availability">
-					<form action="#">
-
-						<div class="a-col">
-							<section>
-								<select class="cs-select cs-skin-border">
-									<option value="" disabled selected>Select Hotel</option>
-									<option value="email">Luxe Hotel</option>
-									<option value="twitter">Deluxe Hotel</option>
-									<option value="linkedin">Five Star Hotel</option>
-								</select>
-							</section>
-						</div>
-						<div class="a-col alternate">
-							<div class="input-field">
-								<label for="date-start">Check In</label>
-								<input type="text" class="form-control" id="date-start" />
->>>>>>> a9ad526cddf29978633fcc3cc264cf8d8ca4e46d:BTL/Views/Shared/_LayoutIndex.cshtml
 							</div>
 						</li>
 						<li style="background-image: url(../1Layout/images/slider2.jpg);">
@@ -246,66 +164,6 @@
 								</div>
 							</form>
 						</div>
-<<<<<<< HEAD:BTL/Views/Shared/_LayoutHome.cshtml
-=======
-						<div class="a-col action">
-							<a href="#">
-								<span>Check</span>
-								Availability
-							</a>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-	
-	<div id="fh5co-counter-section" class="fh5co-counters">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-3 text-center">
-					<span class="fh5co-counter js-counter" data-from="0" data-to="20356" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">User Access</span>
-				</div>
-				<div class="col-md-3 text-center">
-					<span class="fh5co-counter js-counter" data-from="0" data-to="15501" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Hotels</span>
-				</div>
-				<div class="col-md-3 text-center">
-					<span class="fh5co-counter js-counter" data-from="0" data-to="8200" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Transactions</span>
-				</div>
-				<div class="col-md-3 text-center">
-					<span class="fh5co-counter js-counter" data-from="0" data-to="8763" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Rating &amp; Review</span>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="featured-hotel" class="fh5co-bg-color">
-		<div class="container">
-			
-			<div class="row">
-				<div class="col-md-12">
-					<div class="section-title text-center">
-						<h2>Featured Rooms</h2>
-					</div>
-				</div>
-			</div>
-			<div id="displayRoom" class="row">
-				@RenderBody()
-			</div>
-		</div>
-	</div>
-
-	<div id="hotel-facilities">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<div class="section-title text-center">
-						<h2>Hotel Facilities</h2>
->>>>>>> a9ad526cddf29978633fcc3cc264cf8d8ca4e46d:BTL/Views/Shared/_LayoutIndex.cshtml
 					</div>
 				</div>
 			</div>
