--- a/BTL/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/BTL/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -88,7 +88,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../index.html">
+                        <a class="nav-link" asp-area="admin" asp-controller="HomeAdmin" asp-action="Index">
                             <span class="menu-title">Dashboard</span>
                             <i class="mdi mdi-home menu-icon"></i>
                         </a>
