--- a/BTL/Areas/Admin/Views/HomeAdmin/KhachHang.cshtml
+++ b/BTL/Areas/Admin/Views/HomeAdmin/KhachHang.cshtml
@@ -1,21 +1,21 @@
 ﻿
 @using BTL.Models;
 @using X.PagedList.Mvc.Core;
-@model X.PagedList.IPagedList<NhanVien>
+@model X.PagedList.IPagedList<KhachHang>
 
 @{
-    ViewData["Title"] = "Nhân Viên";
+    ViewData["Title"] = "KhachHang";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-<h1>Nhân Viên</h1>
+<h1>Khách Hàng</h1>
 <p style="color:red">@TempData["Message"]</p>
-<p>
-    <a asp-action="ThemNhanVien">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
+            <th>
+                Mã KH
+            </th>
             <th>
                 Họ và tên
             </th>
@@ -23,7 +23,7 @@
                 Giới tính
             </th>
             <th>
-                Căn cước công dân
+               Căn cước công dân
             </th>
             <th>
                 Ngày sinh
@@ -35,10 +35,7 @@
                 Số điện thoại
             </th>
             <th>
-                Chức vụ
-            </th>
-            <th>
-                Ảnh
+                Loại khách hàng
             </th>
             <th></th>
         </tr>
@@ -47,7 +44,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.TenNv)
+                @Html.DisplayFor(modelItem => item.MaKh)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TenKh)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.GioiTinh)
@@ -65,22 +65,19 @@
                 @Html.DisplayFor(modelItem => item.Sdt)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ChucVu)
+                @Html.DisplayFor(modelItem => item.LoaiKhachHang)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Anh)
-            </td>
-            <td>
-                <a asp-action="SuaNhanVien" asp-route-manv="@item.MaNv">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MaNv">Details</a> |
-                <a asp-action="XoaNhanVien" asp-route-manv="@item.MaNv">Delete</a>
+                <a asp-action="SuaKhachHang" asp-route-makh="@item.MaKh">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.MaKh">Details</a> |
+                <a asp-action="XoaKhachHang" asp-route-makh="@item.MaKh">Delete</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
 <div style="margin: 0 auto">
-    @Html.PagedListPager(Model,page => Url.Action("NhanVien", new {page=page, maloai = ViewBag.maloai}),new X.PagedList.Web.Common.PagedListRenderOptions(){
+    @Html.PagedListPager(Model,page => Url.Action("KhachHang", new {page=page, maloai = ViewBag.maloai}),new X.PagedList.Web.Common.PagedListRenderOptions(){
     LiElementClasses = new List<String> {"page-item"},
     PageClasses = new List<String> {"page-link"}
     })
