--- a/BTL/Areas/Admin/Views/HomeAdmin/SuaNhanVien.cshtml
+++ b/BTL/Areas/Admin/Views/HomeAdmin/SuaNhanVien.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>Sửa nhân viên</h1>
+<h1>Sửa thông tin nhân viên</h1>
 
 <h4>Nhân Viên</h4>
 <hr />
@@ -14,11 +14,7 @@
     <div class="col-md-4">
         <form method="post" asp-action="SuaNhanVien">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="MaNv" class="control-label"></label>
-                <input asp-for="MaNv" class="form-control" />
-                <span asp-validation-for="MaNv" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="MaNv" class="form-control" />
             <div class="form-group">
                 <label asp-for="TenNv" class="control-label"></label>
                 <input asp-for="TenNv" class="form-control" />
@@ -60,7 +56,7 @@
                 <span asp-validation-for="Anh" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
