--- a/BTL/Views/Access/DangKy.cshtml
+++ b/BTL/Views/Access/DangKy.cshtml
@@ -1,9 +1,10 @@
-﻿@{
+﻿
+@{
     Layout = null;
 }
-
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@model LoginKh;
+@model DangKyViewModel
+@*@model (List<BarChartViewModel> a,List<BarChartViewModel> a1)*@
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,34 +32,42 @@
                 <div class="row flex-grow">
                     <div class="col-lg-4 mx-auto">
                         <div class="auth-form-light text-left p-5">
-                            <h4>Hello! let's get started</h4>
-                            <h6 class="font-weight-light">Sign in to continue.</h6>
-
-                            @using (Html.BeginForm("DangNhap", "Access", FormMethod.Post))
+                            <div class="brand-logo">
+                                <img src="../../LayoutAdmin/assets/images/logo.svg">
+                            </div>
+                            <h4>New here?</h4>
+                            <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
+                            @using (Html.BeginForm("DangKy", "Access", FormMethod.Post))
                             {
                                 <div class="form-group">
-                                    @* <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Username">*@
-                                    @Html.TextBoxFor(x=>x.Username, new {@class="form-control form-control-lg",placeholder="Username",required="required",autofocus="autofocus"})
+                                    @*<input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username">*@
+                                    @Html.TextBoxFor(x=>x.LoginKh.Username, new {@class="form-control form-control-lg",placeholder="Username",required="required",autofocus="autofocus"})
                                 </div>
                                 <div class="form-group">
-                                    @* <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">*@
-                                    @Html.TextBoxFor(x=>x.Password, new {@class="form-control form-control-lg",type="password",placeholder="Password"})
+@*                                    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">*@
+                                    @Html.TextBoxFor(x=>x.KhachHang.TenKh, new {@class="form-control form-control-lg",placeholder="Họ và tên",required="required",autofocus="autofocus"})
                                 </div>
-                                <div class="mt-3">
-                                    <button class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" type="submit">SIGN IN</button>
+                                <div class="form-group">
+                                    @Html.TextBoxFor(x=>x.KhachHang.Cccd, new {@class="form-control form-control-lg",placeholder="CCCD",required="required",autofocus="autofocus"})
                                 </div>
-                                <div class="my-2 d-flex justify-content-between align-items-center">
+                                <div class="form-group">
+                                    @*<input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">*@
+                                    @Html.TextBoxFor(x=>x.LoginKh.Password, new {@class="form-control form-control-lg",type="password",placeholder="Password"})
+                                </div>
+                                <div class="mb-4">
                                     <div class="form-check">
                                         <label class="form-check-label text-muted">
-                                            <input type="checkbox" class="form-check-input"> Keep me signed in
+                                            <input type="checkbox" class="form-check-input"> I agree to all Terms & Conditions
                                         </label>
                                     </div>
-                                    <a href="#" class="auth-link text-black">Forgot password?</a>
+                                </div>
+                                <div class="mt-3">
+                                    <button class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" type="submit">SIGN UP</button>
                                 </div>
                                 <div class="text-center mt-4 font-weight-light">
-                                    Don't have an account? <a asp-controller="access" asp-action="dangky" class="text-primary">Create</a>
+                                    Already have an account? <a href="login.html" class="text-primary">Login</a>
                                 </div>
-                            }@*</form>*@
+                            }
                         </div>
                     </div>
                 </div>
