--- a/BTL/Views/Shared/_LayoutIndex.cshtml
+++ b/BTL/Views/Shared/_LayoutIndex.cshtml
@@ -85,7 +85,7 @@
 											<p><span>Bora Hotel</span></p>
 											<h2>Reserve Room for Family Vacation</h2>
 											<p>
-												<a asp-controller="Room" asp-action="Index" class="btn btn-primary btn-lg">Book Now</a>
+												<a asp-controller="Room" asp-action="datphong" class="btn btn-primary btn-lg">Book Now</a>
 											</p>
 										</div>
 									</div>
@@ -101,7 +101,7 @@
 											<p><span>Deluxe Hotel</span></p>
 											<h2>Make Your Vacation Comfortable</h2>
 											<p>
-												<a asp-controller="Room" asp-action="Index" class="btn btn-primary btn-lg">Book Now</a>
+												<a asp-controller="Room" asp-action="datphong" class="btn btn-primary btn-lg">Book Now</a>
 											</p>
 										</div>
 									</div>
@@ -117,7 +117,7 @@
 											<p><span>Luxe Hotel</span></p>
 											<h2>A Best Place To Enjoy Your Life</h2>
 											<p>
-												<a asp-controller="Room" asp-action="Index" class="btn btn-primary btn-lg">Book Now</a>
+												<a asp-controller="Room" asp-action="datphong" class="btn btn-primary btn-lg">Book Now</a>
 											</p>
 										</div>
 									</div>
@@ -127,6 +127,7 @@
 					</ul>
 				</div>
 			</aside>
+
 			@await Html.PartialAsync("_PartialGetRoom")
 			
 			<div id="fh5co-counter-section" class="fh5co-counters">
