--- a/BTL/Views/Shared/_PartialHomeHeader.cshtml
+++ b/BTL/Views/Shared/_PartialHomeHeader.cshtml
@@ -23,7 +23,7 @@
 										Xin chào, @TempData["name"]
 									</a>
 									<ul class="fh5co-sub-menu">
-										<li><a asp-action="ThongTinCaNhan" asp-controller="KhachHang">Thông tin cá nhân</a></li>
+										<li><a asp-action="KhachHang" asp-controller="Access">Thông tin cá nhân</a></li>
 										<li><a asp-action="DangXuat" asp-controller="Access">Logout</a></li>
 									</ul>
 							}
