--- a/BTL/Views/Home/Service.cshtml
+++ b/BTL/Views/Home/Service.cshtml
@@ -15,7 +15,7 @@
 		<div class="desc">
 			<h3>@item.TenDv</h3>
 
-			<p><a href="#" class="btn btn-primary btn-luxe-primary">Book Now <i class="ti-angle-right"></i></a></p>
+			<p><a onclick="abc()" class="btn btn-primary btn-luxe-primary">Book Now <i class="ti-angle-right"></i></a></p>
 		</div>
 	</div>
 }
@@ -25,3 +25,9 @@
 	PageClasses = new List<String> {"page-link"}
 	})
 </div>
+<script>
+	function abc()
+	{
+		alert("Web chưa cập nhật tính năng book dịch vụ");
+	}
+</script>
