--- a/BTL/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/BTL/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="../../LayoutAdmin/assets/css/style.css">
     <!-- End layout styles -->
     <link rel="shortcut icon" href="../../LayoutAdmin/assets/images/favicon.ico" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
     <div class="container-scroller">
